CREATE TABLE "vendedor" (
  "vendedor_id" SERIAL PRIMARY KEY,
  "nome_vendedor" VARCHAR(60) NOT NULL
);