---
title: Entity Relationship Diagram Order CRUD
---
erDiagram
    Cliente{
        Integer id_cliente PK
        Varchar(60) nome_cliente "NOT NULL"
        Varchar telefone_cliente "NOT NULL"
        Float saldo "NOT NULL"
    }

    Vendedor{
        Integer id_vendedor PK
        Varchar(60) nome_vendedor "NOT NULL"
    }

    Pedido{
        Integer id_pedido PK
        timestamptz data_pedido "NOT NULL default(now())"
        Varchar status_pedido "NOT NULL"
        Float valor_pedido "NOT NULL"
        Integer id_cliente FK
        Integer id_vendedor FK 
    }

    Produto{
        Integer produto_id PK
        Varchar(60) nome_produto "NOT NULL"
        Float valor_produto "NOT NULL"
        Integer estoque "NOT NULL"
    }

    ProdutoPedido{
        Integer id_pedido FK "NOT NULL"
        Integer produto_id FK "NOT NULL"
        Integer quantidade
    }

    Cliente ||--o{ Pedido : Faz
    Vendedor ||--|{ Pedido : Vende
    Pedido ||--|{ ProdutoPedido : AdicionaProduto
    Produto ||--o{ ProdutoPedido : AdicionadoAoPedido